actor swagger fix
